--- a/package.json
+++ b/package.json
@@ -6,13 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.3",
     "body-parser": "~1.10.1",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.0",
+    "grunt": "^0.4.5",
     "hbs": "~2.8.0",
-    "mongoose": "^4.0.5",
-    "morgan": "~1.5.1"
+    "mongoose": "^3.8.21",
+    "morgan": "~1.5.1",
+    "node-xlsx": "^0.5.1",
+    "passport": "^0.2.2",
+    "passport-local": "^1.0.0",
+    "xlsx": "^0.8.0"
   }
 }
