--- a/package.json
+++ b/package.json
@@ -8,17 +8,31 @@
   "dependencies": {
     "bcrypt": "^0.8.3",
     "body-parser": "~1.10.1",
+    "chai": "^3.2.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.3",
     "debug": "~2.1.1",
     "express": "~4.11.0",
     "grunt": "^0.4.5",
     "hbs": "~2.8.0",
+    "karma": "^0.13.3",
     "mongoose": "^3.8.21",
     "morgan": "~1.5.1",
     "node-xlsx": "^0.5.1",
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
+    "should": "^7.0.2",
+    "supertest": "^1.0.1",
     "xlsx": "^0.8.0"
+  },
+  "devDependencies": {
+    "jasmine-core": "^2.3.4",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^0.2.0",
+    "karma-jasmine": "^0.3.6",
+    "karma-mocha": "^0.2.0",
+    "karma-phantomjs-launcher": "^0.2.0",
+    "mocha": "^2.2.5",
+    "phantomjs": "^1.9.17"
   }
 }
