Fixed bugs: email reg and problem with package.json.

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "passport": "^0.2.2",
     "passport-local": "^1.0.0",
     "xlsx": "^0.8.0",
-    "express-sesion": "~1.11.3",
+    "express-session": "~1.11.3",
     "connect-mongo" : "~0.8.2"
   },
   "devDependencies": {
